--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,7 +7,7 @@
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  &__header {
+} 
+  .logo__header {
   color: $accent-color;
   }
-}
